<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".controller.main.profile.Editprofile"
    android:id="@+id/Editprofile">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/upper_bar_sub"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_left_arrow"
            android:rotationY="@integer/angle_rtl_180"/>


        <TextView
            android:id="@+id/add_Appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/edit_profile_small"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:srcCompat="@drawable/defaultpic" />


    <Button
        android:id="@+id/buttonImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_plus"
        android:ellipsize="none"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/ImageSavedStorage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Is Image Saved in Storage?"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonImage" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/new_white_card"
        android:elevation="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TextView
            android:id="@+id/fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/full_name"
            android:textColor="#817889"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text"
            android:ems="12"
            android:inputType="textPersonName"
            android:textColor="#B1B0B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />


        <TextView
            android:id="@+id/oldText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/OldPassET"
            android:textColor="#817889"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text"
            android:ems="12"
            android:inputType="textPassword"
            android:textColor="#B1B0B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oldText" />

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/oldPassword"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/newText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/NewPassET"
            android:textColor="#817889"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oldPassword" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text"
            android:ems="12"
            android:inputType="textPassword"
            android:textColor="#B1B0B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newText" />

        <TextView
            android:id="@+id/reNewText"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/CNPassET"
            android:textColor="#817889"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newPassword" />


        <EditText
            android:id="@+id/reNewPassword"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text"
            android:ems="12"
            android:inputType="textPassword"
            android:textColor="#B1B0B0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reNewText" />

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_background"
            android:clickable="true"
            android:focusable="auto"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reNewPassword">

            <ImageView
                android:id="@+id/language_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/ic_language_icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/language"
                android:textColor="#515C6F"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/English"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/english"
                android:textColor="#66515C6F"
                android:textSize="15sp"
                tools:ignore="RtlCompat" />

        <!--    <ImageView
                android:id="@+id/go_to3"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_go_to"
                android:rotationY="@integer/angle_rtl_180"/> -->

            <TextView
                android:id="@+id/Arabic"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/arabic"
                android:textColor="#66515C6F"
                android:textSize="15sp" />

        </LinearLayout>


        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:background="@drawable/main_button"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/SaveChangesTD"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/delete" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/delete_button"
            android:fontFamily="@font/montserrat"
            android:padding="10dp"
            android:text="@string/DeleteAcc"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>