...
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="improvement_in">Improvement (in %)</string>
    <string name="percentage" translatable="false">%</string>
    <string name="highest_day_of_anxiety">Highest Day of Anxiety</string>
    <string name="date_here" translatable="false">(date here)</string>
    <string name="allFields">"All fields are required "</string>
    <string name="passwordMatch">"Password does not match, please try again "</string>
    <string name="nameFormat">Please enter correct name format</string>
    <string name="passwordChar">Password is less than 6 characters, please try again </string>
    <string name="emailFormat">"Please enter correct email format "</string>
    <string name="questionnaire">Please complete the questionnaire </string>
    <string name="incomeFormat">Please enter correct income format </string>
    <string name="selectPic">Select Picture </string>
    <string name="image">"Image chosen "</string>
    <string name="passwordUpdate">Password updated </string>
    <string name="passwordNotUpdated">Password is not updated, please try again </string>
    <string name="wrongPassword">you have entered a wrong password </string>
    <string name="passwordSame">You cannot use the same password </string>
    <string name="emailpassWrong">The email or password is wrong</string>
    <string name="auth">Authentication failed</string>
    <string name="emailVerify">Check email link to verify account</string>


    <string name="full">Full-time</string>
...
    <string name="ChooseImage">Choose Image</string>
    <string name="OldPassET">Old Password</string>
    <string name="NewPassET">New Password</string>
    <string name="CNPassET">Confirm New password</string>
    <string name="ForgetPassSuccess">Reset Password was sent to Your Email Successfully</string>
    <string name="ForgetPassFialed">Try Again, Reset Password did not sent</string>
    <string name="EmptyName">Name Should not be Empty</string>
    <string name="NotCorrectName">* Enter valid name.</string>
    <string name="UpdateNameSuccess">Your Name Updated Successfully</string>
    <string name="UpdateNameFialed">Your Name did not Updated, Try Again</string>
    <string name="ImageUpSuccess">Your Image Profile Updated Successfully</string>
    <string name="SelectPicture">Select Image</string>
    <string name="ProfileInfoUpdateSuccess">Your Profile Information Updated Successfully</string>
    <string name="ProfileInfoUpdateFialed">Your Profile Information did not Updated, Try Again</string>
    <string name="DeleteAcc">Delete Account</string>
    <string name="DeleteMessageAcc">
        Deleting this account will result in completely removing your account from the system, you will not be able to access your account again.
    </string>
    <string name="DeleteOKAcc">Delete</string>
...
